[package]
name = "arbie-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tera = "1.19.1"
lazy_static = "1.4.0"
mongodb = "3.1.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
anyhow = "1.0.91"
futures = "0.3.31"
dotenvy = "0.15.7"

